# T-AIA-600

./: .gitignore  .pre-commit-config.yaml  README.md  bookworm.py  card.py  entities.py  lexdiv.py  pyproject.toml  requirements.txt  similar.py  summarize.py  test.py  tools.py  topics.py
data/: alice_entities.json  alice_lexdiv.json
src/: card.py  collection.py  entities.py  fetch.py  lexdiv.py  similar.py  summarize.py  text.py  topics.py
